@@ -1,3 +1,6 @@
+Jun 03, 2015 - chris ---------------------------------------------------
+o Make sure that journal is correclty cleared after recovery
+
 May 26, 2015 - chris ---------------------------------------------------
 o Make sure that errors are not ignored when creating remote cursors
 	(thanks, Ciprian Niculescu)
